# Quol-Tools

./: .gitignore  README.md  updates.txt
src/Quol-CPP/: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example
src/Quol-CPP/plugins/api/: Api.cpp  Api.hpp  CMakeLists.txt
src/Quol-CPP/plugins/api/res/: config.json
src/Quol-CPP/plugins/chance/: CMakeLists.txt  Chance.cpp  Chance.hpp
src/Quol-CPP/plugins/chance/res/: config.json
src/Quol-CPP/plugins/chat/: CMakeLists.txt  Chat.cpp  Chat.hpp
src/Quol-CPP/plugins/chat/lib/: ChatConfig.cpp  ChatConfig.hpp  SnipOverlay.cpp  SnipOverlay.hpp
src/Quol-CPP/plugins/chat/lib/providers/: DeepSeekProvider.cpp  DeepSeekProvider.hpp  GeminiProvider.cpp  GeminiProvider.hpp  GroqProvider.cpp  GroqProvider.hpp  OllamaProvider.cpp  OllamaProvider.hpp  OpenAIProvider.cpp  OpenAIProvider.hpp  OpenRouterProvider.cpp  OpenRouterProvider.hpp  ProviderTypes.hpp
src/Quol-CPP/plugins/chat/res/: config.json
src/Quol-CPP/plugins/cmd/: CMakeLists.txt  Cmd.cpp  Cmd.hpp
src/Quol-CPP/plugins/cmd/lib/: CommandDialog.cpp  CommandDialog.hpp
src/Quol-CPP/plugins/cmd/res/: commands.json  config.json
src/Quol-CPP/plugins/colorPicker/: CMakeLists.txt  ColorPicker.cpp  ColorPicker.hpp
src/Quol-CPP/plugins/colorPicker/res/: config.json
src/Quol-CPP/plugins/draw/: CMakeLists.txt  Draw.cpp  Draw.hpp
src/Quol-CPP/plugins/draw/lib/: ColorWheel.cpp  ColorWheel.hpp  DrawOverlay.cpp  DrawOverlay.hpp
src/Quol-CPP/plugins/draw/res/: config.json
src/Quol-CPP/plugins/example/: CMakeLists.txt  Example.cpp  Example.hpp
src/Quol-CPP/plugins/example/lib/: adder.cpp  adder.hpp
src/Quol-CPP/plugins/example/res/: config.json
src/Quol-CPP/plugins/keymap/: CMakeLists.txt  Keymap.cpp  Keymap.hpp
src/Quol-CPP/plugins/keymap/lib/: KeymapGroupDialog.cpp  KeymapGroupDialog.hpp
src/Quol-CPP/plugins/keymap/res/: config.json  keymaps.json
src/Quol-CPP/plugins/macro/: CMakeLists.txt  Macro.cpp  Macro.hpp
src/Quol-CPP/plugins/macro/res/: config.json
src/Quol-CPP/plugins/misc/: CMakeLists.txt  Misc.cpp  Misc.hpp
src/Quol-CPP/plugins/misc/lib/: DiceWidget.cpp  DiceWidget.hpp  ShaderWidget.cpp  ShaderWidget.hpp  StopwatchWidget.cpp  StopwatchWidget.hpp  ToolBase.hpp
src/Quol-CPP/plugins/misc/res/: config.json
src/Quol-CPP/plugins/musicPlayer/: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.hpp
src/Quol-CPP/plugins/musicPlayer/res/: config.json
src/Quol-PY/chance/res/: config.json
src/Quol-PY/clipboard/lib/: sticky_window.py
src/Quol-PY/cmd/: window.py
src/Quol-PY/color_picker/: window.py
src/Quol-PY/color_picker/res/: config.json
src/Quol-PY/draw/lib/: color_wheel.py
src/Quol-PY/macro/res/: config.json
src/Quol-PY/music/: window.py
src/Quol-PY/stopwatch/lib/: t.py
src/Quol-PY/stronghold/lib/: triangulation.py
src/anime/: window.py
src/anime/lib/: anime_fetcher.py
src/anime/res/: config.json
src/api/: window.py
src/chance/: window.py
src/chance-v1/: window.py
src/chance/res/: config.json
src/chat/: window.py
src/chat-v1/: window.py
src/chat-v1/lib/: ai.py  gpt_window.py  simulator.py
src/chat-v1/res/: config.json  gptstyles.css  styles.css
src/chat-v2/lib/: ai.py
src/chat-v3/: window.py
src/chat-v3/res/: config.json
src/chat/lib/: ai.py  chat_window.py  gpt_window.py  snip_overlay.py
src/chat/res/: config.json
src/clipboard/: window.py
src/clipboard-v1/: window.py
src/clipboard-v1/lib/: button.py  copy_popup.py  note_name_dialog.py
src/clipboard-v1/res/: config.json
src/clipboard/lib/: note_name_dialog.py  sticky_window.py
src/clipboard/res/: clipboard.json  config.json
src/cmd/res/: commands.json
src/color_picker/: window.py
src/color_picker-v1/: window.py
src/color_picker-v1/res/: config.json
src/color_picker/res/: config.json
src/draw/: window.py
src/draw-v1/: window.py
src/draw-v1/lib/: color_wheel.py
src/draw-v1/res/: config.json
src/draw/res/: config.json
src/example-v0/: window.py
src/example-v0/lib/: adder.py
src/example-v0/res/: config.json
src/example-v1/: window.py
src/example-v1/res/: config.json
src/example/lib/: adder.py
src/example/res/: config.json
src/keymap/: window.py
src/keymap-v1/: window.py
src/keymap-v1/res/: config.json
src/keymap-v2/: window.py
src/keymap-v2/res/: config.json
src/keymap/lib/: keymap_group.py
src/keymap/res/: config.json  keymaps.json
src/macro/: window.py
src/macro-v1/: window.py
src/macro-v1/lib/: macro_dialog.py  player.py  popup.py  popup2.py  recorder.py
src/macro-v1/res/: config.json
src/macro/lib/: player.py  recorder.py
src/macro/res/: config.json
src/request/: window.py
src/request-v1/res/: config.json
src/request/res/: config.json
src/run_command/: window.py
src/run_command-v1/res/: config.json
src/run_command/res/: config.json
src/stopwatch/: window.py
src/stopwatch/res/: config.json
src/stronghold/: window.py
src/stronghold/res/: config.json
src/timer/: window.py
src/timer/res/: config.json
